--- a/roles/freeipa-client/tasks/main.yml
+++ b/roles/freeipa-client/tasks/main.yml
@@ -51,6 +51,6 @@
     state: present
 
 - name: Setup client
-  shell: "ipa-client-install -U --mkhomedir --force-ntpd --domain={{ domain }} --server={{ server }} --realm={{ realm }} --hostname={{ hostname }} -principal={{ principal }} --password={{ password }}"
+  shell: "ipa-client-install -U --mkhomedir --force-ntpd --domain={{ domain }} --server={{ server }} --realm={{ realm }} --hostname={{ hostname }} --principal={{ principal }} --password={{ password }}"
 
 
